[package]
name = "fh-core"
version = "0.4.1"
authors = ["まどの <madonoharu@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "=0.2.76", features = ["serde-serialize"] }
js-sys = "=0.3.53"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
strum = { version = "0.23.0", features = ["derive"] } 
num-traits = "0.2.14"
num-derive = "0.3.3"
num_enum = "0.5.4"
fasteval = "0.2.4"
paste = "1.0.6"
arrayvec = { version = "0.7.2", features = ["serde"] }
counter = "0.5.2"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
getrandom = { version = "0.2.3", features = ["js"] }
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
enumset = "1.0.8"
anyhow = "1.0.45"
ts-rs = "6.0.5"
fh-macro = { path = "../fh-macro" }
itertools = "*"
enum-map = "2.0.0-1"

[dependencies.web-sys]
version = "=0.3.53"
features = [
  "console"
]

[dev-dependencies]
wasm-bindgen-test = "=0.3.26"
criterion = "0.3.5"

[[bench]]
name = "bench"
harness = false