[package]
name = "fh-macro"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
once_cell = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
ts-rs = { version = "4.0.0", features = ["serde-compat"] }

[dev-dependencies]
wasm-bindgen = { version = "=0.2.76", features = ["serde-serialize"] }
wasm-bindgen-test = "=0.3.26"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
