[package]
name = "fh-macro"
version = "0.5.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
once_cell = "1.8.0"
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = { version = "1.0.82", features = ["full", "extra-traits"] }
ts-rs = "6.1.0"

[dev-dependencies]
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.28"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
