[package]
name = "fh-macro"
version = "0.5.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
once_cell = "1.9.0"
proc-macro2 = "1.0.36"
quote = "1.0.14"
syn = { version = "1.0.85", features = ["full", "extra-traits"] }
ts-rs = "6.1.0"

[dev-dependencies]
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.28"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
