[package]
name = "fleethub-core"
version = "1.11.7"
authors = ["Madono <madonoharu@gmail.com>"]
edition = "2021"
description = "fleethub-core"
repository = "https://github.com/madonoharu/fleethub"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.86" }
js-sys = "0.3.63"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.9", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

anyhow = "1.0.71"
thiserror = "1.0.40"
arrayvec = { version = "0.7.2", features = ["serde"] }
hashbrown = { version = "0.13.2", features = ["serde"] }
enumset = "1.1.2"
enum-map = "2.5.0"
num-traits = "0.2.15"
num-derive = "0.3.3"
strum = { version = "0.24.1", features = ["derive"] }
itertools = "0.10.5"
seq-macro = "0.3.3"
paste = "1.0.12"
tsify = "0.4.5"
fasteval = "0.2.4"
ordered-float = { version = "3.7.0", features = ["serde"] }
gloo-utils = { version = "0.1.6", features = ["serde"] }

[dependencies.web-sys]
version = "0.3.63"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
criterion = "0.4.0"
once_cell = "1.17.2"
toml = "0.7.4"
assert-json-diff = "2.0.2"
walkdir = "2"
fleethub-core-test = { path = "../fleethub-core-test" }

[[bench]]
name = "bench"
harness = false
