[package]
name = "fleethub-core"
version = "1.12.10"
authors = ["Madono <madonoharu@gmail.com>"]
edition = "2024"
description = "fleethub-core"
repository = "https://github.com/madonoharu/fleethub"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.104" }
js-sys = "0.3.81"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.15", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

anyhow = "1.0.89"
thiserror = "1.0.64"
arrayvec = { version = "0.7.6", features = ["serde"] }
hashbrown = { version = "0.14.5", features = ["serde"] }
enumset = "1.1.5"
enum-map = "2.7.3"
num-traits = "0.2.19"
num-derive = "0.4.2"
strum = { version = "0.26.3", features = ["derive"] }
itertools = "0.13.0"
seq-macro = "0.3.5"
paste = "1.0.15"
tsify = "0.4.5"
fasteval = "0.2.4"
ordered-float = { version = "4.3.0", features = ["serde"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }

[dependencies.web-sys]
version = "0.3.70"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.54"
criterion = "0.5.1"
once_cell = "1.20.1"
toml = "0.8.19"
assert-json-diff = "2.0.2"
walkdir = "2"
fleethub-core-test = { path = "../fleethub-core-test" }

[[bench]]
name = "bench"
harness = false
