[package]
name = "fleethub-macro"
version = "0.10.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
once_cell = "1.10.0"
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full", "extra-traits"] }
ts-rs = "6.1.2"

[dev-dependencies]
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.29"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
